--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                 <div class="bottom-controls">
                     <button id="go-home-btn">첫 화면으로 돌아가기</button>
                     <button id="sound-toggle-btn">소리 끄기</button>
+                    <button id="update-data-btn">업데이트</button> <!-- 업데이트 버튼 추가 -->
                 </div>
                 <div class="table-container">
                     <table id="realtime-data-table">
@@ -125,6 +126,7 @@
                                 <th>바이인</th>
                                 <th>리바이1</th>
                                 <th>리바이2</th>
+                                <th>Out</th>
                             </tr>
                         </thead>
                         <tbody id="realtime-data-tbody">
