--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <button id="time-plus-btn">(10s)&gt;</button>
                     </div>
                     <div class="timer-controls-row">
-                        <button id="heads-up-btn">HEADS-UP</button>
+                        <button id="heads-up-btn">HEADS-UP ON</button>
                     </div>
                 </div>
             </div>
@@ -109,7 +109,8 @@
                     <button id="go-home-btn">첫 화면으로 돌아가기</button>
                     <button id="sound-toggle-btn">소리 끄기</button>
                     <button id="update-data-btn">업데이트</button>
-                    <button id="out-list-btn">Out 목록</button> </div>
+                    <button id="out-list-btn">Out 목록</button>
+                    <button id="lock-btn">잠금</button> </div>
                 <div class="table-container">
                     <table id="realtime-data-table">
                         <thead>
