--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
         </div>
         <div class="preset-buttons">
             <button id="competition-mode-btn">대회모드 Structure</button>
-        </div>
+            <button id="gems-mode-btn">GEMS Structure</button>
+            </div>
         <div class="blind-grid-header">
             <div>Level</div><div>Small</div><div>Big</div><div>Ante</div><div>Duration</div><div></div>
         </div>
