--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             <input type="text" id="break-levels" value="5, 10, 15, 20, 25">
             <label for="break-duration">Break Duration (minutes):</label>
             <input type="number" id="break-duration" value="7">
+            <label for="chip-settings">Chip Setting (x10,000):</label>
+            <input type="text" id="chip-settings" value="4, 5, 8">
         </div>
         <div class="set-all-durations">
             <label for="all-duration-spinner">Set All Durations (min):</label>
@@ -39,9 +41,10 @@
             <button id="apply-all-durations-btn">Apply</button>
         </div>
         <div class="preset-buttons">
-            <button id="competition-mode-btn">대회모드 Structure</button>
-            <button id="gems-mode-btn">GEMS Structure</button>
-            </div>
+            <button id="default-mode-btn">기본모드</button>
+            <button id="competition-mode-btn">대회모드</button>
+            <button id="gems-mode-btn">GEMS모드</button>
+        </div>
         <div class="blind-grid-header">
             <div>Level</div><div>Small</div><div>Big</div><div>Ante</div><div>Duration</div><div></div>
         </div>
