--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <label for="break-duration">Break Duration (minutes):</label>
             <input type="number" id="break-duration" value="7">
             <label for="chip-settings">Chip Setting (x10,000):</label>
-            <input type="text" id="chip-settings" value="4, 5, 8">
+            <input type="text" id="chip-settings" value="4, 5, 7">
         </div>
         <div class="set-all-durations">
             <label for="all-duration-spinner">Set All Durations (min):</label>
@@ -148,6 +148,8 @@
         </div>
     </div>
 
+    <video id="wake-lock-video" loop muted playsinline 
+           src="https://raw.githubusercontent.com/handream7/holdem-timer/main/silent.mp4"></video>
     <script src="script.js"></script>
 </body>
 </html>
