--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <label for="break-duration">Break Duration (minutes):</label>
             <input type="number" id="break-duration" value="7">
             <label for="chip-settings">Chip Setting (x10,000):</label>
-            <input type="text" id="chip-settings" value="4, 5, 7">
+            <input type="text" id="chip-settings" value="4, 5, 5">
         </div>
         <div class="set-all-durations">
             <label for="all-duration-spinner">Set All Durations (min):</label>
@@ -116,9 +116,9 @@
                 <div class="bottom-controls">
                     <button id="go-home-btn">첫 화면으로 돌아가기</button>
                     <button id="sound-toggle-btn">소리 끄기</button>
-                    <button id="update-data-btn">업데이트</button>
                     <button id="out-list-btn">Out 목록</button>
-                    <button id="lock-btn">잠금</button> </div>
+                    <button id="lock-btn">잠금</button> 
+                </div>
                 <div class="table-container">
                     <table id="realtime-data-table">
                         <thead>
@@ -132,7 +132,7 @@
                             </tr>
                         </thead>
                         <tbody id="realtime-data-tbody">
-                            </tbody>
+                        </tbody>
                     </table>
                 </div>
             </div>
@@ -144,7 +144,7 @@
             <span class="close-btn">&times;</span>
             <h2>Out 처리된 플레이어 목록</h2>
             <ul id="out-player-list">
-                </ul>
+            </ul>
         </div>
     </div>
 
