--- a/index.html
+++ b/index.html
@@ -92,7 +92,10 @@
             <div class="top-right-section">
                 <div class="timer-display-area">
                     <p id="level-label">Level 1</p>
-                    <h1 id="timer-label">00:00</h1>
+                    <div class="timer-wrapper">
+                        <h1 id="timer-label">00:00</h1>
+                        <div id="paused-indicator">PAUSED</div>
+                    </div>
                     <p id="blinds-label">Blinds: 0 / 0 / 0</p>
                     <p id="next-blinds-label">Next Level: 0 / 0 / 0</p>
                 </div>
