--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
                         <h1 id="timer-label">00:00</h1>
                         <div id="paused-indicator">PAUSED</div>
                     </div>
-                    <p id="blinds-label">Blinds: 0 / 0 / 0</p>
+                    <p id="blinds-label">
+    <span class="blind-icon">B</span> <span class="blind-values">0 / 0 / 0</span>
+</p>
                     <p id="next-blinds-label">Next Level: 0 / 0 / 0</p>
                 </div>
                 <div class="controls-area">
