--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <audio id="levelup-sound" src="https://raw.githubusercontent.com/handream7/holdem-timer/c26ac59ba57bf0a51ff16859b1c7259e2ab78f75/levelup.mp3" preload="auto"></audio>
-    <audio id="break-sound" src="https://raw.githubusercontent.com/handream7/holdem-timer/d85d3afdff2389cabda7e687455c04ca133d2095/break.mp3" preload="auto"></audio>
-    <audio id="one-minute-sound" src="https://raw.githubusercontent.com/handream7/holdem-timer/c3ee093dfb90e881f7019b4ac8474bfa253618de/1min.mp3" preload="auto"></audio>
+    <audio id="levelup-sound" src="https://github.com/handream7/holdem-timer/raw/refs/heads/main/levelup.mp3" preload="auto"></audio>
+    <audio id="break-sound" src="https://github.com/handream7/holdem-timer/raw/refs/heads/main/break.mp3" preload="auto"></audio>
+    <audio id="one-minute-sound" src="https://github.com/handream7/holdem-timer/raw/refs/heads/main/1min.mp3" preload="auto"></audio>
 
     <div id="landing-page" class="page-container">
         <h1>홀덤 토너먼트 타이머</h1>
