--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                     <button id="sound-toggle-btn">소리 끄기</button>
                     <button id="out-list-btn">Out 목록</button>
                     <button id="lock-btn">잠금</button> 
+                    <button id="fullscreen-btn">전체화면</button> 
                 </div>
                 <div class="table-container">
                     <table id="realtime-data-table">
